--- a/assets/manifests/minio-deployment.yaml
+++ b/assets/manifests/minio-deployment.yaml
@@ -34,6 +34,7 @@ spec:
             - name: MINIO_ROOT_PASSWORD
               value: "adminadmin"
           image: quay.io/minio/minio:RELEASE.2022-06-17T02-00-35Z
+          imagePullPolicy: Always
           args: ["server", "/data", "--console-address", ":9001"]
           name: minio
           ports:
